--- a/tela-inicial.html
+++ b/tela-inicial.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>ola bem-vindo ao nossos games</h1>
+    <h1>bem-vindo ao nossos games</h1>
     <a href="calculadora/calculadora.html">calcuadora</a>
     <a href="quiz-biblico/quiz-biblico.html">quiz-biblico</a>
     
