--- a/filmes-main/filmes_fantasia/fantasia.html
+++ b/filmes-main/filmes_fantasia/fantasia.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style-fantasia.css">
 </head>
 <body>
+    <a href="kung-fu-panda.html"><img src="kung-fu-panda.html" alt=""></a>
+    <a href="kung-fu-panda2.html"><img src="kung-fu-panda2.html" alt=""></a>
+    <a href="kung-fu-panda3.html"><img src="kung-fu-panda3.html" alt=""></a>
+    <a href="kung-fu-panda4.html"><img src="kung-fu-panda4.html" alt=""></a>
     <a href="harry-potter1.html"><img src="fotos/fot-harry-potter1.jpeg" alt=""></a>
     <a href="harry-potter2.html"><img src="fotos/foto-harry-potter2.webp" alt=""></a>
     <a href="harry-potter3.html"><img src="fotos/foto-harry-potter3.jpg" alt=""></a>
