--- a/quiz-games/quiz-games_principal.html
+++ b/quiz-games/quiz-games_principal.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <a href="quiz-minecreft.html"><img src="fotos/minecreft.jpg" alt=""></a>
+    <a href="quiz-gta.html"><img src="fotos/gta.jpg" alt=""></a>
 </body>
 </html>
