--- a/quiz-games/quiz-minecreft.html
+++ b/quiz-games/quiz-minecreft.html
@@ -154,7 +154,7 @@
 
     <p id="final"></p>
     <a id="rodada" href="">Sim </a>
-    <a href="quiz-bibico2.html">Não</a>
+    
     
 
 
@@ -169,6 +169,6 @@
 
 
 
-    <script src="quiz-biblico.js"></script>
+    <script src="quiz-games.js"></script>
 </body>
 </html>
