--- a/tela-inicial.html
+++ b/tela-inicial.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>bem-vindo ao nossos games</h1>
-    <a href="calculadora/calculadora.html">calcuadora</a>
-    <a href="quiz-biblico/quiz-biblico.html">quiz-biblico</a>
-    <a href="quiz-games/quiz-games_principal.html"></a>
+    <a href="calculadora/calculadora.html">Calcuadora</a>
+    <a href="quiz-biblico/quiz-biblico.html">Quiz-biblico</a>
+    <a href="quiz-games/quiz-games_principal.html">Quiz Game</a>
     <a href="filmes-main/tela_inicial.html">Filmes</a>
     
 </body>
