--- a/quiz-games/quiz-games_principal.html
+++ b/quiz-games/quiz-games_principal.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quiz-Game</title>
     <link rel="stylesheet" href="quiz-games.css">
 </head>
 <body>
+     <h1>Quiz-Game</h1>
     <a href="quiz-minecreft.html"><img src="fotos/minecreft.jpg" alt=""></a>
     <a href="quiz-gta.html"><img src="fotos/gta.jpg" alt=""></a>
 </body>
