--- a/filmes-main/filmes_romantico/filmes-romanticos.html
+++ b/filmes-main/filmes_romantico/filmes-romanticos.html
@@ -10,6 +10,14 @@
     <a href="prova-de-fogo.html"><img src="fotos/foto-prova-de-fogo.jpg" alt=""></a>
     <a href="after-depois-da-promessa.html"><img src="fotos/after-depos-da-promessa.webp" alt=""></a>
     <a href="titanic.html"><img src="fotos/foto-titanic.jpg" alt=""></a>
+    <a href="barraca-do-beijo.html"><img src="fotos/A Barraca do Beijo.jpg" alt=""></a>
+    <a href="barraca-do-beijo2.html"><img src="fotos/A Barraca do Beijo2.jpg" alt=""></a>
+    <a href="barraca-do-beijo3.html"><img src="fotos/A Barraca do Beijo3.jpg" alt=""></a>
+    <a href="de-repente-30.htm"><img src="fotos/de repente30.webp" alt=""></a>
+   
+   
+   
+   
     <a href="atraves-da-minha-janela.html"><img src="fotos/foto-atraves-da-minha-janela.webp" alt=""></a>
 </body>
 </html>
