--- a/filmes-main/tela_inicial.html
+++ b/filmes-main/tela_inicial.html
@@ -22,7 +22,8 @@
             <a class="de" href="filme_ficção-cientificos/fimes-ficção-cientificas.html">ficção</a> <br>
             <a class="de" href="filme_comedia/filmes-comedia.html">comedia</a> <br>
             <a class="de" href="filmes-desenho/desenho.html">desenho</a>
-          </span>
+            <a class="de" href="filmes_romantico/filmes-romanticos.html">Romance</a>
+        </span>
       </span>
       
         </nav>
