--- a/filmes-main/filmes_romantico/filmes-romanticos.html
+++ b/filmes-main/filmes_romantico/filmes-romanticos.html
@@ -14,10 +14,11 @@
     <a href="barraca-do-beijo2.html"><img src="fotos/A Barraca do Beijo2.jpg" alt=""></a>
     <a href="barraca-do-beijo3.html"><img src="fotos/A Barraca do Beijo3.jpg" alt=""></a>
     <a href="de-repente-30.htm"><img src="fotos/de repente30.webp" alt=""></a>
-   
-   
-   
-   
+    <a href="querido-jonh.html"><img src="fotos/querido jonh.jpg" alt=""></a>
+    <a href="uma-linda-mulher.html"><img src="fotos/uma-linda-mulher.jpg" alt=""></a>
+    <a href="nos-vemos-em-venus.html"><img src="fotos/nos vemos em venus.webp" alt=""></a>
+    <a href="depois-do-universo.html"><img src="fotos/depois-do-universo.webp" alt=""></a>
+    <a href="o-meu-primeir-amor.html"><img src="fotos/meu-primero-amor.webp" alt=""></a>
     <a href="atraves-da-minha-janela.html"><img src="fotos/foto-atraves-da-minha-janela.webp" alt=""></a>
 </body>
 </html>
