--- a/quiz-games/quiz-games_principal.html
+++ b/quiz-games/quiz-games_principal.html
@@ -8,7 +8,7 @@
 </head>
 <body>
      <h1>Quiz-Game</h1>
-     <a href="quiz-minecreft.html"><img src="fotos/minecreft.jpg" alt=""></a>
-     <a href="quiz-gta.html"><img src="fotos/gta.jpg" alt=""></a>
+     <a href="quiz-minecreft.html">Quiz minecreft</a>
+     <a href="quiz-gta.html">Quiz de GTA</a>
     </body>
 </html>
