--- a/filmes-main/filmes_romantico/filmes-romanticos.html
+++ b/filmes-main/filmes_romantico/filmes-romanticos.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <a href="prova-de-fogo.html"><img src="fotos/foto-prova-de-fogo.jpg" alt=""></a>
+    <a href="after1.html"><img src="fotos/after1.png" alt=""></a>
+    <a href="after2.html"><img src="fotos/after2.jpg" alt=""></a>
+    <a href="after3.html"><img src="fotos/after3.jpg" alt=""></a>
     <a href="after-depois-da-promessa.html"><img src="fotos/after-depos-da-promessa.webp" alt=""></a>
     <a href="titanic.html"><img src="fotos/foto-titanic.jpg" alt=""></a>
     <a href="barraca-do-beijo.html"><img src="fotos/A Barraca do Beijo.jpg" alt=""></a>
@@ -19,6 +22,13 @@
     <a href="nos-vemos-em-venus.html"><img src="fotos/nos vemos em venus.webp" alt=""></a>
     <a href="depois-do-universo.html"><img src="fotos/depois-do-universo.webp" alt=""></a>
     <a href="o-meu-primeir-amor.html"><img src="fotos/meu-primero-amor.webp" alt=""></a>
+    <a href="para-todos-os-garotos-que-ja-amei.html"><img src="fotos/para todos os garotos que ja amei.jpg" alt=""></a>
+    <a href="para-todos-os-garotos-que-ja-amei2.html"><img src="fotos/para todos os garotos que ja amei2.jpg" alt=""></a>
+    <a href="amor-com-data-marcada.html"><img src="fotos/date com data marcada.jpg" alt=""></a>
+    <a href="continencia-do-amor.html"><img src="continencia-do-amor.html" alt=""></a>
+    <a href="upgraded.html"><img src="fotos/upgraded.jpg" alt=""></a>
+    <a href="a-cinco-passos-de-voce.html"><img src="fotos/a 5 passos de voce.jpg" alt=""></a>
+    <a href="amor-pela-primeira-vez.html"><img src="fotos/amor a primeira vista.webp" alt=""></a>
     <a href="atraves-da-minha-janela.html"><img src="fotos/foto-atraves-da-minha-janela.webp" alt=""></a>
 </body>
 </html>
