--- a/filmes-main/filmes_terror/terror.html
+++ b/filmes-main/filmes_terror/terror.html
@@ -9,6 +9,10 @@
 </head>
 <body>
    <header>filmes de terror</header>
+   <a href="tempo(2021).html"><img src="fotos/tempo (2021).jpg" alt=""></a>
+   <a href="rua-do-medo1.html"><img src="fotos/rua do medo 1.webp" alt=""></a>
+   <a href="rua-do-medo2.html"><img src="fotos/rua do medo 2.webp" alt=""></a>
+   <a href="rua-do-medo3.html"><img src="fotos/rua do medo 3.jpg" alt=""></a>
    <a href="iluminado.html"><img src="fotos/anjos-da-noite-underworld.jpg" alt=""></a>
    <a href="anjos-da-noite2.html"><img src="fotos/foto-anjos-da-noite2.jpg" alt=""></a>
    <a href="anjo-da-noite3.html"><img src="fotos/foto-anjo-da-noite3.jpg" alt=""></a>
