--- a/filmes-main/filmes_suspense/filmes-suspense.html
+++ b/filmes-main/filmes_suspense/filmes-suspense.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style-suspense.css">
 </head>
 <body>
-    <div> <a href="jogos-mortais1.html"><img src="fotos/foto-jogos-mortais1.webp" alt="">jogos mrtais</a>jogos mortais</div>
+    <a href="jogos-mortais1.html"><img src="fotos/foto-jogos-mortais1.webp" alt=""></a>
      <a href="jogos-mortais2.html"><img src="fotos/foto-jogos-mortais2.webp" alt=""></a>
      <a href="jogos-mortais3.html"><img src="fotos/foto-jogos-mortais3.webp" alt=""></a>
      <a href="jogos-mortais4.html"><img src="fotos/foto-jogos-mortais4.webp" alt=""></a>
@@ -17,6 +17,11 @@
      <a href="jogos-mortais8.html"><img src="fotos/foto-jogos-mortais8.jpg" alt=""></a>
      <a href="jogos-mortais9.html"><img src="fotos/foto-jogos-mortais9.jpg" alt=""></a>
      <a href="jogos-mortais-X.html"><img src="fotos/foto-jogos-mortais10.jpg" alt=""></a>
+     <a href="premoniçao1.html"><img src="fotos/premoniçao1.jpg" alt=""></a>
+     <a href="premoniçao2.html"><img src="fotos/premoniçao2.webp" alt=""></a>
+     <a href="premoniçao3.html"><img src="fotos/premoniçao3.jpg" alt=""></a>
+     <a href="premoniçao4.html"><img src="fotos/premoniçao4.jpg" alt=""></a>
+     <a href="premoniçao5.html"><img src="fotos/premoniçao5.webp" alt=""></a>
      <a href="fratura2019.html"><img src="fotos/foto-fratura.jpg" alt=""></a>
 
 
