--- a/filmes-main/filmes_terror/terror.html
+++ b/filmes-main/filmes_terror/terror.html
@@ -9,6 +9,12 @@
 </head>
 <body>
    <header>filmes de terror</header>
+   
+   <a href="escolha-ou-morra.html"><img src="fotos/escolha ou morte.jpg" alt=""></a>
+   <a href="na-companhia-do-medo.html"><img src="fotos/na companhia do mal.jpg" alt=""></a>
+   <a href="mundança-mortal.html"><img src="fotos/mundaça mortal.jpg" alt=""></a>
+   <a href="hereditario.html"><img src="fotos/hereditario.jpg" alt=""></a>
+   <a href="a-hora-da-sua-morte.html"><img src="fotos/hora da sua morte.jpg" alt=""></a>
    <a href="tempo(2021).html"><img src="fotos/tempo (2021).jpg" alt=""></a>
    <a href="rua-do-medo1.html"><img src="fotos/rua do medo 1.webp" alt=""></a>
    <a href="rua-do-medo2.html"><img src="fotos/rua do medo 2.webp" alt=""></a>
