--- a/quiz-biblico/quiz-biblico.html
+++ b/quiz-biblico/quiz-biblico.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Quiz-biblico</h1>
- <h2 id="pontoontuaçao <span id="pontuaçao">0</span></h2>  
+ <h2> pontuaçao<span id="pontuaçao">0</span></h2>  
 
 
 
