--- a/quiz-games/quiz-games_principal.html
+++ b/quiz-games/quiz-games_principal.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="quiz-games.css">
 </head>
 <body>
-     <h1>Quiz-Game</h1>
-     <a href="quiz-minecreft.html">Quiz minecreft</a>
-     <a href="quiz-gta.html">Quiz de GTA</a>
+    <h1>Quiz Games</h1>
+     <a href="quiz-gta.html">GTA</a>
+     <a href="quiz-minecreft.html">MINECREFT</a>
     </body>
 </html>
