--- a/filmes-main/filmes_romantico/filmes-romanticos.html
+++ b/filmes-main/filmes_romantico/filmes-romanticos.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style-romantico.css">
 </head>
 <body>
+    <h1>Romance</h1>
     <a href="prova-de-fogo.html"><img src="fotos/foto-prova-de-fogo.jpg" alt=""></a>
     <a href="after1.html"><img src="fotos/after1.png" alt=""></a>
     <a href="after2.html"><img src="fotos/after2.jpg" alt=""></a>
