--- a/filmes-main/filmes_terror/terror.html
+++ b/filmes-main/filmes_terror/terror.html
@@ -8,7 +8,7 @@
     <style>h1 {text-align: center;}</style>
 </head>
 <body>
-   <header>filmes de terror</header>
+   <h1>Teror</h1>
    
    <a href="escolha-ou-morra.html"><img src="fotos/escolha ou morte.jpg" alt=""></a>
    <a href="na-companhia-do-medo.html"><img src="fotos/na companhia do mal.jpg" alt=""></a>
