--- a/quiz-games/quiz-games_principal.html
+++ b/quiz-games/quiz-games_principal.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Quiz Games</h1>
-     <a href="quiz-gta.html">GTA</a>
+     <a href="quiz-gta.html">GTA</a> <br>
      <a href="quiz-minecreft.html">MINECREFT</a>
     </body>
 </html>
