--- a/filmes-main/filme_comedia/filmes-comedia.html
+++ b/filmes-main/filme_comedia/filmes-comedia.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style-comedia.css">
 </head>
 <body>
+       <h1>Comedia</h1>
     <a href="todo-mundo-em-panico.1html"><img src="fotos/foto-todo-mundo-em-panico1.jpg" alt=""></a>
     <a href="todo-mundo-em-panico2.html"><img src="fotos/foto-todo-mundo-em-panico2.webp" alt=""></a>
     <a href="todo-mundo-em-panico3.html"><img src="fotos/foto-todo-mundo-em-panico3.jpg" alt=""></a>
