--- a/pregaçoes/pagina-inicial.html
+++ b/pregaçoes/pagina-inicial.html
@@ -8,6 +8,10 @@
 <body>
     <h1>Pregações</h1>
     <h2>Pregadores</h2>
+    <a href="eliseu-rodrigues.html">Eliseu Rodrigues</a>
+    <a href="junior-trovao.html">Junior Trovão</a>
+    <a href="camila-barros.html">Camila Barros</a>
     
+
 </body>
 </html>
