--- a/pregaçoes/eliseu-rodrigues.html
+++ b/pregaçoes/eliseu-rodrigues.html
@@ -7,6 +7,16 @@
 </head>
 <body>
     <h1>Eliseu Rodrigues</h1>
+    <h2>Juizo Final</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/r1Jh0i8Qwxk?si=xAD3TjUK7LxHM_gd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     
+    <h2>Sansão: O escravo dos proprios prazeres</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/XqeFOo0_gcc?si=Z2NiCUrjvgpuEsDe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <h2>O pecado de Davi</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/nt8xaruLrAw?si=XqwHcNlJDKWUxFg8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <h2>Minha Graça te basta</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/OQL041gCNCk?si=UAGYoXcW49Fkkf6e" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
