--- a/tela-inicial.html
+++ b/tela-inicial.html
@@ -15,6 +15,7 @@
     <a href="quiz-games/quiz-games_principal.html">Quiz Game</a>
     
     <a href="filmes-main/tela_inicial.html">Filmes</a>
-    
+    <br>
+    <a href="pregaçoes/pagina-inicial.html">Pregaçoes</a>
 </body>
 </html>
