--- a/pregaçoes/eliseu-rodrigues.html
+++ b/pregaçoes/eliseu-rodrigues.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="precaçao.css">
 </head>
 <body>
     <div><h1>Eliseu Rodrigues</h1>
