--- a/pregaçoes/pagina-inicial.html
+++ b/pregaçoes/pagina-inicial.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="precaçao.css">
 </head>
 <body>
-    <h1>Pregações</h1>
+    <h1>Pregações on-line</h1>
     <h2>Pregadores</h2>
     <a href="eliseu-rodrigues.html">Eliseu Rodrigues</a> <br>
     <a href="junior-trovao.html">Junior Trovão</a>     <br>
