--- a/tela-inicial.html
+++ b/tela-inicial.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogo de Adivinhação</title>
+    <title>Meus Sites</title>
     <link rel="stylesheet" href="tela-inicial.css">
 </head>
 <body>
-    <h1>bem-vindo ao nossos games</h1>
+    <h1>Bem-Vindo aos meu Sites</h1>
     <a href="calculadora/calculadora.html">Calcuadora</a>
     
     <a href="quiz-biblico/quiz-biblico.html">Quiz-biblico</a> 
