--- a/tela-inicial.html
+++ b/tela-inicial.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <h1>Bem-Vindo aos meu Sites</h1>
-    <a href="calculadora/calculadora.html">Calcuadora</a>
+    <a href="calculadora/calculadora.html"><h2>Calculadora</h2></a>
     
-    <a href="quiz-biblico/quiz-biblico.html">Quiz-biblico</a> 
+    <a href="quiz-biblico/quiz-biblico.html"><h2>Quiz-biblico</h2></a> 
     <br>
-    <a href="quiz-games/quiz-games_principal.html">Quiz Game</a>
+    <a href="quiz-games/quiz-games_principal.html"><h2>Quiz-Games</h2></a>
     
-    <a href="filmes-main/tela_inicial.html">Filmes</a>
+    <a href="filmes-main/tela_inicial.html"><h2>Filmes</h2></a>
     <br>
-    <a href="pregaçoes/pagina-inicial.html">Pregaçoes</a>
+    <a href="pregaçoes/pagina-inicial.html"><h2>Pregaçoes</h2></a>
 </body>
 </html>
