--- a/calculadora/calculadora.html
+++ b/calculadora/calculadora.html
@@ -40,7 +40,7 @@
 
 
     <main>
-        <h1>divisao</h1>
+        <h1>Divisao</h1>
         <label for="text">digite um numero</label>
         <input id="numerodivA" type="text">      <br>
         <label for="text">digite um numero</label> <br>
@@ -48,6 +48,18 @@
         <button onclick="dividir()">calcular</button>
         <p id="respostadiv"></p>
     </main>
+
+    <main>
+        <h1>Potencia</h1>
+        <label for="text">digite um numero</label>
+        <input id="numerodivA" type="text">      <br>
+        <label for="text">digite um numero</label> <br>
+        <input id="numerodivB" type="text">
+        <button onclick="dividir()">calcular</button>
+        <p id="respostadiv"></p>
+    </main>
+
+    
    
    
     <script src="calculadora.js"></script>
