--- a/quiz-games/quiz-minecreft.html
+++ b/quiz-games/quiz-minecreft.html
@@ -153,7 +153,7 @@
     </span>
 
     <p id="final"></p>
-    <a id="rodada" href="">Sim </a>
+    <a id="rodada" href="quiz-minecreft2.html">Sim </a>
     
     
 
