--- a/calculadora/calculadora.html
+++ b/calculadora/calculadora.html
@@ -52,11 +52,11 @@
     <main>
         <h1>Potencia</h1>
         <label for="text">digite um numero</label>
-        <input id="numerodivA" type="text">      <br>
+        <input id="numeropotA" type="text">      <br>
         <label for="text">digite um numero</label> <br>
-        <input id="numerodivB" type="text">
+        <input id="numeropotB" type="text">
         <button onclick="dividir()">calcular</button>
-        <p id="respostadiv"></p>
+        <p id="respostapot"></p>
     </main>
 
     
