--- a/calculadora/calculadora.html
+++ b/calculadora/calculadora.html
@@ -55,7 +55,7 @@
         <input id="numeropotA" type="text">      <br>
         <label for="text">digite um numero</label> <br>
         <input id="numeropotB" type="text">
-        <button onclick="dividir()">calcular</button>
+        <button onclick="potencia()">calcular</button>
         <p id="respostapot"></p>
     </main>
 
