--- a/tela-inicial.html
+++ b/tela-inicial.html
@@ -10,9 +10,8 @@
     <h1>Bem-Vindo aos meu Sites</h1>
     <a href="calculadora/calculadora.html"><h2>Calculadora</h2></a>
     
-    <a href="quiz-biblico/quiz-biblico.html"><h2>Quiz-biblico</h2></a> 
+    <a href="QUIZ'S/QUIZ.html"><h2>Quiz-biblico</h2></a> 
     <br>
-    <a href="quiz-games/quiz-games_principal.html"><h2>Quiz-Games</h2></a>
     
     <a href="filmes-main/tela_inicial.html"><h2>Filmes</h2></a>
     <br>
