--- a/QUIZ'S/QUIZ.html
+++ b/QUIZ'S/QUIZ.html
@@ -9,13 +9,13 @@
 <body>
     <h1>Quiz</h1>
     <br>
-    <h2>Quiz-biblico</h2>
+    <h2>Quiz-Biblico</h2>
     <a href="quiz-biblico/quiz-biblico.html"><img src="fotos/biblia.jpg" alt=""></a>
     <br>
-    <h2>Quiz-games</h2>
+    <h2>Quiz-Games</h2>
     <a href="quiz-games/quiz-games_principal.html"><img src="fotos/Games-Brasil.jpg" alt=""></a>
     <br>
-    <h2>Quiz-series</h2>
+    <h2>Quiz-Series</h2>
     <a href="quiz-series/series-quiz.html"><img src="fotos/diarios de um vampiro.jpg" alt=""></a>
 </body>
 </html>
