--- a/QUIZ'S/quiz-games/quiz-roblox.html
+++ b/QUIZ'S/quiz-games/quiz-roblox.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="quiz-games.css">
 </head>
 <body>
-    <h1>Quiz-Minecreft</h1>
+    <h1>Quiz-Roblox</h1>
  <h2>pontuaçao <span id="pontuaçao">0</span></h2>  
 
 
