--- a/QUIZ'S/quiz-series/diarios-de-um-vampiro.html
+++ b/QUIZ'S/quiz-series/diarios-de-um-vampiro.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="series.css">
 </head>
 <body>
-    <h1>Quiz-Minecreft</h1>
+    <h1>Quiz-Diaros de um vampiro</h1>
  <h2>pontuaçao <span id="pontuaçao">0</span></h2>  
 
 
