--- a/pregaçoes/camila-barros.html
+++ b/pregaçoes/camila-barros.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet" href="precaçao.css">
 </head>
 <body>
-    
+    <h1>Camila barros</h1>
+    <h2>Deus conhece nossa humanidade</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/bk7FD1aUq3I?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <br>
+    <h2>Sustente tua fé</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/BGYFk_pAImE?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <br>
+    <h2>Faça o que tem que ser feito</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/yWOO2KJT9-I?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <br>
+    <h2>Fé inabalavel</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/ubjKAzSsBNg?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <br>
+    <h2>JESUS VENCEU POR VOCÊ</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/rH_vix_SbRU?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <br>
+    <h2>Como Ser Guiado por Deus</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/U7D_-RuBS-c?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  
+   <br>
+   <h2></h2>
+
+   <br>
+   <h2></h2>
+
+
 </body>
 </html>
