--- a/pregaçoes/junior-trovao.html
+++ b/pregaçoes/junior-trovao.html
@@ -7,6 +7,30 @@
     <link rel="stylesheet" href="precaçao.css">
 </head>
 <body>
-    
+    <h1>Junior Trovão</h1>
+    <h2>Sede por Deus</h2>
+    <br>
+    <iframe width="500" height="315" src="https://www.youtube.com/embed/MKNsXuuKMCo?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <br>
+    <h2>Verdadeiro avivamento</h2>
+    <iframe width="500" height="315" src="https://www.youtube.com/embed/GNWSwwMjXx4?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <br>
+    <h2>Como vai ser o fim dos tempos</h2>
+    <iframe width="500" height="315" src="https://www.youtube.com/embed/k2mQXW4KGuY?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <br>
+    <h2>AONDE DEUS TE COLOCA, NINGUÉM TE TIRA!</h2>
+    <iframe width="500" height="315" src="https://www.youtube.com/embed/G5wf88kvMOk?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <br>
+    <h2>A volta de cristo</h2>
+    <iframe width="500" height="315" src="https://www.youtube.com/embed/CIV_7b0p8Vo?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <br>
+    <h2>O AntiCristo</h2>
+    <iframe width="500" height="315" src="https://www.youtube.com/embed/4btmBBQ7YUg?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <br>
+    <h2>Deus nao perde para o diabo</h2>
+    <iframe width="500" height="315" src="https://www.youtube.com/embed/12KP_WYUSF8?si=KeCInSkKmD7iJYAR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
+
 </body>
 </html>
