--- a/escola/calculadora/calculadora.html
+++ b/escola/calculadora/calculadora.html
@@ -53,7 +53,7 @@
         <h1>Potencia</h1>
         <label for="text">digite um numero</label>
         <input id="numeropotA" type="text">      <br>
-        <label for="text">digite um numero</label> <br>
+        <label for="text">digite o numero da elevação/label> <br>
         <input id="numeropotB" type="text">
         <button onclick="potencia()">calcular</button>
         <p id="respostapot"></p>
