--- a/QUIZ'S/quiz-series/diarios-de-um-vampiro.html
+++ b/QUIZ'S/quiz-series/diarios-de-um-vampiro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quiz Diarios de um vampiro</title>
     <link rel="stylesheet" href="series.css">
 </head>
 <body>
