--- a/escola/inicio-escola.html
+++ b/escola/inicio-escola.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <a href="calculadora/calculadora.html">Calculadora</a>
-    <a href="matematica/1 -ano.html">matematica do 1 ano</a>
+    <a href="matematica/1 -ano.html">Matematica do 1 ano</a>
 </body>
 </html>
