--- a/tela-inicial.html
+++ b/tela-inicial.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Bem-Vindo aos meu Sites</h1>
-    <a href="calculadora/calculadora.html"><h2>Calculadora</h2></a>
+    <a href="escola/inicio-escola.html"><h2>Escola</h2></a>
     
     <a href="QUIZ'S/QUIZ.html"><h2>Quiz'S</h2></a> 
     <br>
