--- a/escola/matematica/1 -ano.html
+++ b/escola/matematica/1 -ano.html
@@ -4,26 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="1-ano.css">
 </head>
 <body>
     <h1>Aulas de Matemeticas do 1 ano</h1>
     <h2>Adição</h2>
-    <p>7 + 10 =</p> <input id="Q1" type="text"> <button onclick="calcular()">conferir</button>
-    <p id="resultadoQ1"></p>
+    <p>07 + 10 = <span>17</span></p> <input id="Q1" type="text"> <button onclick="calcular()">conferir</button>
+    <p id="resultadoQ1"></p>  
+    <br>
 
+    <p>09 + 12 = <span>21</span></p> <input id="Q2" type="text"> <button>conferir</button>
+    <p id="resultadoQ2"></p>
+    <br>
 
+    <p>12 + 21 =</p> <span>33</span> <input id="Q3" type="text"> <button>conferir</button>
+    <p id="resultadoQ3"></p>
+    <br>
 
+    <p>15 + 12 =</p> <span>27</span> <input id="Q4" type="text"> <button>conferir</button>
+    <p id="resultadoQ4"></p>
+    <br>
 
-
-
-
-
-
-
-
-
-
-
+    <p>23 + 24 =</p> <span>47</span> <input Q type="text"> <button>conferir</button>
+    <p id="resultadoQ5"></p>
 
  <script src="1 -ano.js"></script>
 </body>
