--- a/tela-inicial.html
+++ b/tela-inicial.html
@@ -37,7 +37,7 @@
     <img src="zoto minha.jpg" alt="">
  </div>   
 <h2>Sobre</h2>
-<p>Meu nome é deriky e eu estou aprendento a programar eu quero trabalhar nessa area poriso eu estu estudanto HTML, CSS e JAVACRIPT e isso e apenas o começo mas no futuro eu quero aprederr a criar app no mobille </p>
+<p>Meu nome é deriky e eu estou aprendendo a programar, eu quero trabalhar nessa área, e eu estou estudando HTML, CSS e JavaScript e isso e apenas o começo, mas no futuro eu quero aprender a criar app no mobile </p>
 
 
 
