--- a/tela-inicial.html
+++ b/tela-inicial.html
@@ -10,7 +10,7 @@
    <ul>
     <li><a href="tela-inicial.html">Sobre</a></li>
     <li id="Projetos">
-      <p>projetos</p>
+      <a href="#">Projetos</a>
       <span id="menu">
         <a href="escola/inicio-escola.html"><h2>Escola</h2></a>
         <br>
@@ -37,7 +37,7 @@
     <img src="zoto minha.jpg" alt="">
  </div>   
 <h2>Sobre</h2>
-<p>Meu nome é deriky e eu estou aprendendo a programar, eu quero trabalhar nessa área, e eu estou estudando HTML, CSS e JavaScript e isso e apenas o começo, mas no futuro eu quero aprender a criar app no mobile </p>
+<h3> Meu nome é deriky e eu estou aprendendo a programar, eu quero trabalhar nessa área, e eu estou estudando HTML, CSS e JavaScript e isso e apenas o começo, mas no futuro eu quero aprender a criar app no mobile </h3>
 
 
 
