--- a/filmes-main/filmes_terror/terror.html
+++ b/filmes-main/filmes_terror/terror.html
@@ -9,7 +9,26 @@
 </head>
 <body>
    <h1>Teror</h1>
-   
+   <a href="sorria.html"><img src="fotos/sorria.jpg" alt=""></a>
+   <a href="dia-do-terror.html"><img src="fotos/dia do terror.webp" alt=""></a>
+   <a href="a-luz-do-demonio.html"><img src="fotos/a luz do demonio.jpg" alt=""></a>
+   <a href="os-outros.html"><img src="fotos/os outros.webp" alt=""></a>
+   <a href="corra.html"><img src="fotos/corra.webp" alt=""></a>
+   <a href="voce-e-o-proximo.html"><img src="fotos/voce sera o proximo.webp" alt=""></a>
+   <a href="nos.html"><img src="fotos/nos.webp" alt=""></a>
+   <a href="furia(2019).html"><img src="fotos/furia(2019).jpg" alt=""></a>
+   <a href="panico-americano.html"><img src="fotos/panico americano.png" alt=""></a>
+   <a href="oferenda-ao-demonio.html"><img src="fotos/oferenda ao demonio.jpg" alt=""></a>
+   <a href="desafio(2020).html"><img src="fotos/desafi0 (2020).webp" alt=""></a>
+   <a href="venus(2022).html"><img src="fotos/venus(2022).jpg" alt=""></a>
+   <a href="um-lugar-silencioso1.html"><img src="fotos/um lugar silencioso 1.webp" alt=""></a>
+   <a href="a-morte-do-demonio1.html"><img src="fotos/a morte do demonio 1.jpg" alt=""></a>
+   <a href="a-morte-do-demonio2.html"><img src="fotos/a morte do demonio 2.jpg" alt=""></a>
+
+
+   <a href="cemiterio-maldito.html"><img src="fotos/Cemitério_maldito(1989).jpg" alt=""></a>
+   <a href="noites-brutais.html"><img src="fotos/noites brutais.webp" alt=""></a>
+   <a href="a-presa.html"><img src="fotos/a presa.jpg" alt=""></a>
    <a href="escolha-ou-morra.html"><img src="fotos/escolha ou morte.jpg" alt=""></a>
    <a href="na-companhia-do-medo.html"><img src="fotos/na companhia do mal.jpg" alt=""></a>
    <a href="mundança-mortal.html"><img src="fotos/mundaça mortal.jpg" alt=""></a>
