--- a/filmes-main/filmes_ação/kickboxer1.html
+++ b/filmes-main/filmes_ação/kickboxer1.html
@@ -7,5 +7,5 @@
 </head>
 <body>
     <iframe src="https://www.tokyvideo.com/embed/340088" frameborder="0" width="640" height="360" scrolling="no" allowfullscreen webkitallowfullscreen mozallowfullscreen allowtransparency style="display:block;max-width:100%;margin:0 auto 10px"></iframe>
-</body>
+</body> <img src="fotos/" alt="">
 </html>
