--- a/filmes-main/filmes_romantico/filmes-romanticos.html
+++ b/filmes-main/filmes_romantico/filmes-romanticos.html
@@ -8,6 +8,29 @@
 </head>
 <body>
     <h1>Romance</h1>
+    <a href="fica-comigo.html"><img src="fotos/fica comigo.webp" alt=""></a>
+    <a href="sex-appeal.html"><img src="fotos/sex appel.webp" alt=""></a>
+    <a href="votos-de-amor.html"><img src="fotos/votos de amor.jpg" alt=""></a>
+    <a href="para-sempre.html"><img src="fotos/para sempre.jpg" alt=""></a>
+    <a href="3-vezes-amor.html"><img src="fotos/3 vezes amor.webp" alt=""></a>
+    <a href="sorte-no-amor.html"><img src="fotos/sorte no amor.jpg" alt=""></a>
+    <a href="a-vida-secreta-de-zoe.html"><img src="fotos/vida secreta de zoe.webp" alt=""></a>
+    <a href="ela-e-demais.html"><img src="fotos/ela e demais.webp" alt=""></a>
+    <a href="tudo-pra-ficar-com-ele.html"><img src="fotos/tudo pra ficar com ele.jpg" alt=""></a>
+    <a href="o-garoto-da-casa-ao-lado.html"><img src="fotos/o garoto da casa ao lado.jpg" alt=""></a>
+    <a href="diarios-de-uma-paixaõ.html"><img src="fotos/diario de uma paixão.jpg" alt=""></a>
+    <a href="uma-segunda-vez-para-o-amor.html"><img src="fotos/uma segunda chace para amar.jpg" alt=""></a>
+    <a href="amor-mandou-mensagem.html"><img src="fotos/o amor mandou mensagem.jpg" alt=""></a>
+    <a href="meu-namorado-e-um-zumbe.html"><img src="fotos/meu namorado e um zumbi.webp" alt=""></a>
+    <a href="todos-menos-voce.html"><img src="fotos/todos menos voce.jpg" alt=""></a>
+    <a href="amor,felicidade-ou-casamento.html"><img src="fotos/amor-felicidade ou casamento.webp" alt=""></a>
+    <a href="um-lugar-bem-longe-daqui.html"><img src="fotos/um-lugar-bem-longe-daqui-poster.jpg" alt=""></a>
+    <a href="jogo-do-amor(2022).html"><img src="fotos/jogo do amor (2022).webp" alt=""></a>
+    <a href="um-amor-para-recordar.html"><img src="fotos/um amor para recordar.webp" alt=""></a>
+    <a href="se-eu-ficar.html"><img src="fotos/se eu ficar.webp" alt=""></a>
+    <a href="escolha(2016).html"><img src="fotos/escolha (2016).webp" alt=""></a>
+    <a href="uma-comedia-nada-ronantica.html"><img src="fotos/uma comedia nada romantica.jpg" alt=""></a>
+    <a href="o-primeiro-amor.html"><img src="fotos/primeiro amor.jpg" alt=""></a>
     <a href="prova-de-fogo.html"><img src="fotos/foto-prova-de-fogo.jpg" alt=""></a>
     <a href="after1.html"><img src="fotos/after1.png" alt=""></a>
     <a href="after2.html"><img src="fotos/after2.jpg" alt=""></a>
@@ -23,6 +46,7 @@
     <a href="nos-vemos-em-venus.html"><img src="fotos/nos vemos em venus.webp" alt=""></a>
     <a href="depois-do-universo.html"><img src="fotos/depois-do-universo.webp" alt=""></a>
     <a href="o-meu-primeir-amor.html"><img src="fotos/meu-primero-amor.webp" alt=""></a>
+    <a href="meu-primeir-amor2.html"><img src="fotos/meu-primero-amor 2.jpg" alt=""></a>
     <a href="para-todos-os-garotos-que-ja-amei.html"><img src="fotos/para todos os garotos que ja amei.jpg" alt=""></a>
     <a href="para-todos-os-garotos-que-ja-amei2.html"><img src="fotos/para todos os garotos que ja amei2.jpg" alt=""></a>
     <a href="amor-com-data-marcada.html"><img src="fotos/date com data marcada.jpg" alt=""></a>
