--- a/filmes-main/filmes_suspense/filmes-suspense.html
+++ b/filmes-main/filmes_suspense/filmes-suspense.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style-suspense.css">
 </head>
 <body>
+     <a href="a-queda.html"><img src="fotos/a queda.jpg" alt=""></a>
+     <a href="clube-da-luta.html"><img src="fotos/clube da luta.webp" alt=""></a>
+     <a href="a-pele-que-habito.html"><img src="fotos/a pele em que habito.webp" alt=""></a>
+    
+    
     <a href="jogos-mortais1.html"><img src="fotos/foto-jogos-mortais1.webp" alt=""></a>
      <a href="jogos-mortais2.html"><img src="fotos/foto-jogos-mortais2.webp" alt=""></a>
      <a href="jogos-mortais3.html"><img src="fotos/foto-jogos-mortais3.webp" alt=""></a>
