--- a/filmes-main/filmes_terror/terror.html
+++ b/filmes-main/filmes_terror/terror.html
@@ -9,6 +9,7 @@
 </head>
 <body>
    <h1>Teror</h1>
+   <a href="o-nascimento-do-mal.html"><img src="fotos/o nascimento do mal.webp" alt=""></a>
    <a href="sorria.html"><img src="fotos/sorria.jpg" alt=""></a>
    <a href="dia-do-terror.html"><img src="fotos/dia do terror.webp" alt=""></a>
    <a href="a-luz-do-demonio.html"><img src="fotos/a luz do demonio.jpg" alt=""></a>
@@ -24,8 +25,7 @@
    <a href="um-lugar-silencioso1.html"><img src="fotos/um lugar silencioso 1.webp" alt=""></a>
    <a href="a-morte-do-demonio1.html"><img src="fotos/a morte do demonio 1.jpg" alt=""></a>
    <a href="a-morte-do-demonio2.html"><img src="fotos/a morte do demonio 2.jpg" alt=""></a>
-
-
+   <a href="presos-no-gelo2.html"><img src="fotos/presos no gelo 2.jpg" alt=""></a>
    <a href="cemiterio-maldito.html"><img src="fotos/Cemitério_maldito(1989).jpg" alt=""></a>
    <a href="noites-brutais.html"><img src="fotos/noites brutais.webp" alt=""></a>
    <a href="a-presa.html"><img src="fotos/a presa.jpg" alt=""></a>
