--- a/filmes-main/vam-damme/vam-damme.html
+++ b/filmes-main/vam-damme/vam-damme.html
@@ -15,7 +15,21 @@
 </a>
 
 <a href="../filmes_ação/seis-balas-2012.html">
-<img src="../filmes_ação/fotos/foto-seis-balas.webp" alt="">
-</a>
+<img src="../filmes_ação/fotos/foto-seis-balas.webp" alt=""></a>
+
+<a href="../filmes_ação/jogos-letais.html">
+<img src="../filmes_ação/fotos/jogos letais.jpg" alt=""></a>
+
+<a href="../filmes_ação/kickboxer1.html">
+<img src="../filmes_ação/fotos/kickboxer-vam damme.jpg" alt=""></a>
+
+
+
+
+
+
+
+
+
 </body>
 </html>
