--- a/filmes-main/filmes_romantico/filmes-romanticos.html
+++ b/filmes-main/filmes_romantico/filmes-romanticos.html
@@ -12,6 +12,12 @@
     <a href="sex-appeal.html"><img src="fotos/sex appel.webp" alt=""></a>
     <a href="votos-de-amor.html"><img src="fotos/votos de amor.jpg" alt=""></a>
     <a href="para-sempre.html"><img src="fotos/para sempre.jpg" alt=""></a>
+    <a href="500-dias-com-ela.html"><img src="fotos/500 dias com ela.webp" alt=""></a>
+    <a href="amor-com-fetiche.html"><img src="fotos/amor com fetiche.png" alt=""></a>
+    <a href="encontro-de-amor.html"><img src="fotos/encontro de amor.webp" alt=""></a>
+    <a href="amor-alem-da-vida.html"><img src="fotos/amor alem da vida.webp" alt=""></a>
+    <a href="as-vantagens-de-ser-invisivel.html"><img src="fotos/vantagems de ser invisivel.jpg" alt=""></a>
+    <a href="amor-de-redençao.html"><img src="amor-de-redençao.html" alt=""></a>
     <a href="3-vezes-amor.html"><img src="fotos/3 vezes amor.webp" alt=""></a>
     <a href="sorte-no-amor.html"><img src="fotos/sorte no amor.jpg" alt=""></a>
     <a href="a-vida-secreta-de-zoe.html"><img src="fotos/vida secreta de zoe.webp" alt=""></a>
