--- a/QUIZ'S/quiz-biblico/quiz-biblico.html
+++ b/QUIZ'S/quiz-biblico/quiz-biblico.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Quiz-biblico</h1>
+    <h1>Quiz-Biblico</h1>
     <h2> Pontuação<span id="pontuaçao ">0</span></h2>  
    
    
