--- a/filmes-main/tela_inicial.html
+++ b/filmes-main/tela_inicial.html
@@ -10,7 +10,7 @@
 </head>
 <body>
    <header>
-      <h1>HYPER TWO</h1>
+      <h1 id="h1Especial">HYPER TWO</h1>
       <span id="menu"><p>TEMAS</p> 
         <span id="sub-menu">
             <a class="de" href="filmes_terror/terror.html">Terror</a> <br>
