--- a/jogos/QUIZ'S/quiz-biblico/quiz-bibico2.html
+++ b/jogos/QUIZ'S/quiz-biblico/quiz-bibico2.html
@@ -152,7 +152,8 @@
        </span>
    
        <p id="final"></p>
-    <a class="rodada" href="quiz-biblico3.html">Sim</a>
+    <a id="rodada" href="quiz-biblico3.html">Sim</a>
+    <a id="voltar" href="/tela-inicial.html">Tela-inicial</a>
 
 
 
