--- a/jogos/QUIZ'S/quiz-biblico/quiz-biblico.html
+++ b/jogos/QUIZ'S/quiz-biblico/quiz-biblico.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +8,12 @@
 </head>
 <body>
     <h1>Quiz-Biblico</h1>
-    <h2> Pontuação<span id="pontuaçao ">0</span></h2>  
+    <h2> Pontuação <span id="pontuaçao">0</span></h2>  
    
    
    
    <main>
-       <span id="p">
+       <span id="p" >
            <p>1:Quem foi para a cova do leãos</p>
        <p class="per" onclick="errado()">a &rpar; Davi</p>
            
@@ -140,8 +140,7 @@
    
    
    
-   
-       <span id="p10" class="sumir">
+           <span id="p10" class="sumir">
            <p>10:Quem foi o profeta que desafiou os profetas de Baal no monte Carmelo?</p>
            <p class="per" onclick="finalizado()">a&rpar; Elias</p> 
    
@@ -151,12 +150,14 @@
    
            <p class="per" onclick="errado()">d&rpar; Jeremias</p>
        </span>
+
+
    
        <p id="final"></p>
-       <a id="rodada" href="quiz-bibico2.html">Sim </a>
-       <a href="quiz-bibico2.html">Não</a>
+       <a id="rodada" href="quiz-bibico2.html">Sim </a> <br>
+       <a id="voltar" href="/tela-inicial.html">Tela Inicial</a>
        
-   <script src="quiz-biblico.js"></script>
+       <script src="quiz-biblico.js"></script>
 </body>
 </html>
 
