--- a/jogos/QUIZ'S/quiz-biblico/quiz-biblico4.html
+++ b/jogos/QUIZ'S/quiz-biblico/quiz-biblico4.html
@@ -153,4 +153,9 @@
     </span>
 
     <p id="final"></p>
-    <a id="rodada" href="">Sim </a>
+    <a id="rodada" href="quiz-biblico5.html">Sim </a>
+    <a id="voltar" href="/tela-inicial.html">Tela-inicial</a>
+
+<script src="quiz-biblico.js"></script>
+</body>
+</html>
