--- a/tela-inicial.html
+++ b/tela-inicial.html
@@ -14,12 +14,14 @@
       <span id="menu">
         <a href="escola/inicio-escola.html"><h2>Escola</h2></a>
         <br>
-        <a href="QUIZ'S/QUIZ.html"><h2>Quiz'S</h2></a> 
+        <a href="jogos/jogos-inicial.htm"><h2>Jogos</h2></a> 
         <br>
         <a href="filmes-main/tela_inicial.html"><h2>Hyper two</h2></a>
         <br>
         <a href="pregaçoes/pagina-inicial.html"><h2>Crescendo na Fé</h2></a>
-    </span>
+        <br>
+        <a href="copio-so-nao-faço-igual/tela-copia.html">Fazer igual</a>
+      </span>
     </li>
   </ul>
   <div class="imagem">
