--- a/filmes-main/filmes_terror/5-noites-com-o-freddy.html
+++ b/filmes-main/filmes_terror/5-noites-com-o-freddy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>5 noites com o freddy</title>
 </head>
 <body>
     <iframe src="https://www.tokyvideo.com/embed/492505" frameborder="0" width="640" height="360" scrolling="no" allowfullscreen webkitallowfullscreen mozallowfullscreen allowtransparency style="display:block;max-width:100%;margin:0 auto 10px"></iframe>
