--- a/jogos/QUIZ'S/quiz-biblico/quiz-biblico3.html
+++ b/jogos/QUIZ'S/quiz-biblico/quiz-biblico3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="quiz-games.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Quiz-biblico</h1>
@@ -154,3 +154,8 @@
 
     <p id="final"></p>
     <a id="rodada" href="quiz-biblico4.html">Sim </a>
+    <a id="voltar" href="/tela-inicial.html">Tela-inicial</a>
+    <script src="quiz-biblico.js"></script>
+ 
+ </body>
+ </html>
