--- a/filmes-main/tela_inicial.html
+++ b/filmes-main/tela_inicial.html
@@ -9,7 +9,7 @@
       
 </head>
 <body id="mudar">
-   <header>
+   <header id="hyper">
       <h1 id="h1Especial">HYPER TWO</h1>
       <span id="menu"><p id="temas">TEMAS</p> 
         <span id="sub-menu">
@@ -35,8 +35,8 @@
     </span></span>
    </header>
   
-   <button id="preto" onclick="preto()"><div id="bolaP"></div></button>
    <button id="branco" onclick="branco()"><div id="bolaB"></div></button>
+   <button id="preto" onclick="preto()"><div id="bolaP"></div></button>
    
         
    
