--- a/copio-so-nao-faço-igual/tela-copia.html
+++ b/copio-so-nao-faço-igual/tela-copia.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="teste.css">
 </head>
 <body>
     <h1>sites que eu copie só não fiz igual</h1>
-    <a href="cmsp/cmsp.html">CmSp</a>
-    <a href="netflix/netflix.html">NETFLIX</a>
-    <a href="teste.html">aaaa</a>
+    
+    <div>  <a href="cmsp/cmsp.html">CmSp</a></div>
+    <div>  <a href="netflix/netflix.html">NETFLIX</a></div>
+    <div>  <a href="teste.html">Testes DEV</a></div>
 </body>
 </html>
