--- a/copio-so-nao-faço-igual/teste.html
+++ b/copio-so-nao-faço-igual/teste.html
@@ -7,12 +7,16 @@
     <link rel="stylesheet" href="teste.css">
 </head>
 <body id="mudar">
-   <button id="preto" onclick="preto()"><div id="bolaP"></div></button>
-   <button id="branco" onclick="branco()"><div id="bolaB"></div></button>
-   
-   
-   
-   
+  
+
+<div class="container">
+  <input onclick="ver()" type="checkbox" class="checkbox" id="checkbox">
+  <label class="switch" for="checkbox">
+    <span class="slider"></span>
+  </label>
+</div>
+
+
     <script src="teste.js"></script>
 </body>
 </html>
