--- a/jogos/jogos-inicial.htm
+++ b/jogos/jogos-inicial.htm
@@ -11,7 +11,7 @@
     <a href="QUIZ'S/QUIZ.html">Quiz's</a>
      
     <a href="adivinha-numero/adivinha-numero.html">Adivinhe o Numero</a>
-     
+    <a href="jogos-web/tela-inicial.html">g</a>
     <a href="jogo-memoria/jogo-da-memoria.html">JO</a>
 </body>
 </html>
