--- a/tela-inicial.html
+++ b/tela-inicial.html
@@ -12,15 +12,15 @@
     <li id="Projetos">
       <a href="#">Projetos</a>
       <span id="menu">
-        <a href="escola/inicio-escola.html"><h2>Escola</h2></a>
+      <div>  <a href="escola/inicio-escola.html">Escola</a></div>
         <br>
-        <a href="jogos/jogos-inicial.htm"><h2>Jogos</h2></a> 
+        <div>  <a href="jogos/jogos-inicial.htm">Jogos</a> </div>
         <br>
-        <a href="filmes-main/tela_inicial.html"><h2>Hyper two</h2></a>
+        <div>  <a href="filmes-main/tela_inicial.html">Hyper two</a></div>
         <br>
-        <a href="pregaçoes/pagina-inicial.html"><h2>Crescendo na Fé</h2></a>
+        <div>  <a href="pregaçoes/pagina-inicial.html">Crescendo na Fé</a></div>
         <br>
-        <a href="copio-so-nao-faço-igual/tela-copia.html">Fazer igual</a>
+        <div>  <a href="copio-so-nao-faço-igual/tela-copia.html">Fazer igual</a></div>
       </span>
     </li>
   </ul>
@@ -30,7 +30,8 @@
     
   
 <h2>Sobre</h2>
-<h3> Meu nome é deriky e eu estou aprendendo a programar, eu quero trabalhar nessa área, e eu estou estudando HTML, CSS e JavaScript e isso e apenas o começo, mas no futuro eu quero aprender a criar app no mobile, Estou ainda aprendendo enta ainda vou melhorar muito </h3>
+<h3> Meu nome é deriky e eu estou aprendendo a programar, eu quero trabalhar nessa área, e eu estou estudando HTML, CSS e JavaScript e isso e apenas o começo, mas no futuro eu quero aprender a criar app no mobile, Estou ainda aprendendo enta ainda vou melhorar muito
+  e aprendendo a cada dia </h3>
 
 
 
