--- a/tela-inicial.html
+++ b/tela-inicial.html
@@ -18,7 +18,7 @@
         <br>
         <div>  <a href="filmes-main/tela_inicial.html">Hyper two</a></div>
         <br>
-        <div>  <a href="pregaçoes/pagina-inicial.html">Crescendo na Fé</a></div>
+        <div>  <a href="aumento de fe/aumento-de-fe.html">Crescendo na Fé</a></div>
         <br>
         <div>  <a href="copio-so-nao-faço-igual/tela-copia.html">Fazer igual</a></div>
       </span>
